--- a/week-1/profile-app/src/app/app.component.html
+++ b/week-1/profile-app/src/app/app.component.html
@@ -24,7 +24,7 @@
   </ul>
 </nav>
 
-<h2>({ assignment })</h2>
+<h2>{{ assignment }}</h2>
 
 <div class="main" class="container">
   <div class="row">
