--- a/week-1/profile-app/src/app/my-image/my-image.component.html
+++ b/week-1/profile-app/src/app/my-image/my-image.component.html
@@ -1,13 +1,1 @@
-<!--
-======================================
-; Title: my-image.component.html
-; Author: Chris Gorham
-; Date: 28 May 2023
-; Description: This code is for the html portions of the the my image component
-; Sources Used:
-; Assignment 1.5 Instructions
-; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
-=====================================
--->
-
-<img src="./assets/profilepic.jpg" alt="me" title="Picture of Chris Gorham">
+<img src="./assets/picture.jpg" width="50%">
