--- a/week-1/profile-app/src/app/my-details/my-details.component.html
+++ b/week-1/profile-app/src/app/my-details/my-details.component.html
@@ -1,3 +1,15 @@
+<!--
+======================================
+; Title: my-details.component.html
+; Author: Chris Gorham
+; Date: 28 May 2023
+; Description: This code is for the html portions of the my-details component for the profile picture project
+; Sources Used:
+; Assignment 1.5 Instructions
+; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+=====================================
+-->
+
 <ul class="list">
   <li>Name: Chris Gorham</li>
   <li>Favorite Food: Japanese Curry</li>
