--- a/week-1/profile-app/src/app/my-image/my-image.component.html
+++ b/week-1/profile-app/src/app/my-image/my-image.component.html
@@ -1,1 +1,13 @@
+<!--
+======================================
+; Title: my-image.component.html
+; Author: Chris Gorham
+; Date: 28 May 2023
+; Description: This code is for the html portions of the my-image component for the profile picture project
+; Sources Used:
+; Assignment 1.5 Instructions
+; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+=====================================
+-->
+
 <img src="./assets/picture.jpg" width="50%">
