--- a/week-2/my-app/src/app/app.component.html
+++ b/week-2/my-app/src/app/app.component.html
@@ -1,3 +1,15 @@
+<!--
+======================================
+; Title: app.component.html
+; Author: Chris Gorham
+; Date: 29 May 2023
+; Description: This code is for the html portions of the my app project
+; Sources Used:
+; Assignment 2.2 Instructions
+; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+=====================================
+-->
+
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item active">
