--- a/week-2/my-app/src/app/contact/contact.component.html
+++ b/week-2/my-app/src/app/contact/contact.component.html
@@ -1,1 +1,13 @@
+<!--
+======================================
+; Title: contact.component.html
+; Author: Chris Gorham
+; Date: 29 May 2023
+; Description: This code is for the html portions for the Contact component of the my app project
+; Sources Used:
+; Assignment 2.2 Instructions
+; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+=====================================
+-->
+
 <p>Contact page works!</p>
