--- a/week-2/composer-app/src/app/contact/contact.component.html
+++ b/week-2/composer-app/src/app/contact/contact.component.html
@@ -1,1 +1,19 @@
-<p>contact works!</p>
+<div class="row">
+
+
+  <div class="col-sm-4"><br><br>
+    <header class="red-bg mozart-header">Where He Lives:</header>
+    <p class="black-bg display-font">6 Alicia Street<br>
+       Somersworth, NH<br>
+    </p>
+  </div>
+
+  <div class="col-sm-4"><br><br>
+    <h1><i class="fas fa-location-arrow text-secondary"></i>His Phone Number:</h1>
+    <p class="black-bg display-font">603-698-4435</p>
+
+  </div>
+
+
+</div>
+
