--- a/week-2/composer-app/src/app/about/about.component.html
+++ b/week-2/composer-app/src/app/about/about.component.html
@@ -1,6 +1,5 @@
 <div class="row">
 
-
   <div class="col-sm-4"><br><br>
     <figure>
       <img class="composer-bg" src="./assets/mozart.png" width="50%">
@@ -10,8 +9,14 @@
   </div>
 
   <div class="col-sm-8"><br><br>
-    <p class="composer-bg composer-font">
-      Wolfgang Amadeus Mozart (27 January 1756 – 5 December 1791) was one of the most influential, popular, and prolific composers of the classical period. A child prodigy born in a musical family in Salzburg, Austria, he began composing at an early age over 600 works, including some of the most famous pieces of symphonic, chamber, operatic, and choral music. His most well-known pieces include Serenade No. 13 “Eine kleine Nachtmusik”, Symphony No. 41 “Jupiter”, Clarinet Concerto, The Magic Flute, and Requiem. Mozart died at the young age of 35 from a medical issue.
+    <h2>Wolfgang Amadeus Mozart</h2>
+    <hr>
+    <p>
+      <figure>
+        Wolfgang Amadeus Mozart (1756-1791) was one of the most influential, popular and prolific composers of the classical period. He composed over 600 works, including some of the most famous and loved pieces of symphonic, chamber, operatic, and choral music. Mozart was born in Salzburg to a musical family. From an early age, the young Mozart showed all the signs of a prodigious musical talent. By the age of 5 he could read and write music, and he would entertain people with his talents on the keyboard. By the age of 6 he was writing his first compositions. Mozart was generally considered to be a rare musical genius, though Mozart said that he was diligent in studying other great composers such as Haydn and Bach.<br><br>
+        <figcaption>Source: <a href="https://www.operaphila.org/whats-on/on-stage-2016-2017/figaro/composer/#:~:text=Wolfgang%20Amadeus%20Mozart%20(1756%2D1791,Salzburg%20to%20a%20musical%20family" target="resource window">Operaphila</a></figcaption>
+      </figure>
+
     </p>
   </div>
 
