--- a/week-2/composer-app/src/app/app.component.html
+++ b/week-2/composer-app/src/app/app.component.html
@@ -25,7 +25,7 @@
 </nav>
 
 <div class="main" class="container">
-
+  <br><br><h2>{{ assignment }}</h2>
   <router-outlet></router-outlet>
 
 </div>
