--- a/week-2/composer-app/src/app/contact/contact.component.html
+++ b/week-2/composer-app/src/app/contact/contact.component.html
@@ -2,15 +2,15 @@
 
 
   <div class="col-sm-4"><br><br>
-    <header class="red-bg mozart-header">Where He Lives:</header>
-    <p class="black-bg display-font">6 Alicia Street<br>
-       Somersworth, NH<br>
+    <h4>Where They Live:</h4>
+    <p>65 Indigo Street<br>
+       Dover, NH<br>
     </p>
   </div>
 
   <div class="col-sm-4"><br><br>
-    <h1><i class="fas fa-location-arrow text-secondary"></i>His Phone Number:</h1>
-    <p class="black-bg display-font">603-698-4435</p>
+    <h4>Their Phone Number:</h4>
+    <p>603-698-4435</p>
 
   </div>
 
