--- a/week-2/composer-app/src/app/about/about.component.html
+++ b/week-2/composer-app/src/app/about/about.component.html
@@ -2,7 +2,7 @@
 
   <div class="col-sm-4"><br><br>
     <figure>
-      <img class="composer-bg" src="./assets/mozart.png" width="50%">
+      <br><img class="composer-bg" src="./assets/mozart.png" width="50%">
       <figcaption>Source: <a href="https://pixabay.com/illustrations/illustration-wolfgang-amadeus-mozart-4884183/" target="resource window">Pixabay</a></figcaption>
     </figure>
 
