--- a/week-2/composer-app/src/app/composer-list/composer-list.component.html
+++ b/week-2/composer-app/src/app/composer-list/composer-list.component.html
@@ -3,8 +3,8 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th>Full name</th>
-          <th>Genre</th>
+          <th class="black-header white-text">Full name</th>
+          <th class="black-header white-text">Genre</th>
         </tr>
       </thead>
       <tbody *ngFor="let composer of composers">
