--- a/week-2/composer-app/src/app/about/about.component.html
+++ b/week-2/composer-app/src/app/about/about.component.html
@@ -1,10 +1,19 @@
+<!--
+======================================
+; Title: about.component.html
+; Author: Chris Gorham
+; Date: 30 May 2023
+; Description: This code is for the html portions of the about component for the composer app project
+; Sources Used:
+; Exercise 2.4 Instructions
+; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+=====================================
+-->
+
 <div class="row">
 
   <div class="col-sm-4"><br><br>
-    <figure>
       <br><img class="composer-bg" src="./assets/mozart.png" width="50%">
-      <figcaption>Source: <a href="https://pixabay.com/illustrations/illustration-wolfgang-amadeus-mozart-4884183/" target="resource window">Pixabay</a></figcaption>
-    </figure>
 
   </div>
 
