--- a/week-2/composer-app/src/app/about/about.component.css
+++ b/week-2/composer-app/src/app/about/about.component.css
@@ -1,3 +1,14 @@
+/*
+======================================
+; Title: about.component.css
+; Author: Chris Gorham
+; Date: 30 May 2023
+; Description: This code supports CSS functionality for the about component of the composer app
+; Sources Used:
+; Exercise 2.4 Instructions
+;=====================================
+*/
+
 .composer-bg {
 background-color: grey;
 }
