--- a/week-2/composer-app/src/app/composer-list/composer-list.component.css
+++ b/week-2/composer-app/src/app/composer-list/composer-list.component.css
@@ -1,3 +1,14 @@
+/*
+======================================
+; Title: composer-list.component.css
+; Author: Chris Gorham
+; Date: 30 May 2023
+; Description: This code supports CSS functionality for the composer-list component of the composer app
+; Sources Used:
+; Exercise 2.4 Instructions
+;=====================================
+*/
+
 .black-header {
   background-color: black;
 }
