--- a/week-2/composer-app/src/app/composer-list/composer-list.component.html
+++ b/week-2/composer-app/src/app/composer-list/composer-list.component.html
@@ -1,3 +1,15 @@
+<!--
+======================================
+; Title: composer-list.component.html
+; Author: Chris Gorham
+; Date: 30 May 2023
+; Description: This code is for the html portions of the composer-list component for the composer app project
+; Sources Used:
+; Exercise 2.4 Instructions
+; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+=====================================
+-->
+
 <div class="row">
   <div class="col-sm-8">
     <table class="table table-bordered">
