--- a/week-2/composer-app/src/app/contact/contact.component.html
+++ b/week-2/composer-app/src/app/contact/contact.component.html
@@ -1,3 +1,15 @@
+<!--
+======================================
+; Title: contact.component.html
+; Author: Chris Gorham
+; Date: 30 May 2023
+; Description: This code is for the html portions of the contact component for the composer app project
+; Sources Used:
+; Exercise 2.4 Instructions
+; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+=====================================
+-->
+
 <div class="row">
 
 
