attribution / comment updates

--- a/week-2/composer-app/src/app/app.component.html
+++ b/week-2/composer-app/src/app/app.component.html
@@ -25,6 +25,7 @@
 </nav>
 
 <div class="main" class="container">
+  <!-- uses the assignment variable to post the assignment into the HTML-->
   <br><br><h2>{{ assignment }}</h2>
   <router-outlet></router-outlet>
 
