attribution / comments updates

--- a/week-2/enhanced-profile-app/src/app/my-details/my-details.component.html
+++ b/week-2/enhanced-profile-app/src/app/my-details/my-details.component.html
@@ -17,6 +17,7 @@
   <li class="list-group-item">
     Keywords:
     <span *ngFor="let word of myProfile.keywords">
+      <!-- Inserts keywords from the word variable-->
           {{ word }}
     </span>
 
