--- a/week-2/enhanced-profile-app/src/app/app.component.html
+++ b/week-2/enhanced-profile-app/src/app/app.component.html
@@ -32,6 +32,7 @@
 
   <br><br>
 
+  <!-- If statement that refers to the isLoggedIn variable and gives an else statement to handle if it is false-->
   <div class="row" *ngIf="isLoggedIn; else showError">
     <div class="col-sm-4">
       <app-my-image></app-my-image>
