attribution / comments updates

--- a/week-3/enhanced-composer-app/src/app/about/about.component.css
+++ b/week-3/enhanced-composer-app/src/app/about/about.component.css
@@ -2,10 +2,10 @@
 ======================================
 ; Title: about.component.css
 ; Author: Chris Gorham
-; Date: 30 May 2023
-; Description: This code supports CSS functionality for the about component of the composer app
+; Date: 05 Jun 2023
+; Description: This code supports CSS functionality for the about component of the enhanced composer app
 ; Sources Used:
-; Exercise 2.4 Instructions
+; Exercise 3.2 Instructions
 ;=====================================
 */
 
