--- a/week-3/enhanced-composer-app/src/app/app.component.css
+++ b/week-3/enhanced-composer-app/src/app/app.component.css
@@ -2,9 +2,9 @@
 ======================================
 ; Title: app.component.css
 ; Author: Chris Gorham
-; Date: 30 May 2023
-; Description: This code supports CSS functionality for the composer app
+; Date: 05 June 2023
+; Description: This code supports CSS functionality for the enhanced composer app
 ; Sources Used:
-; Exercise 2.4 Instructions
+; Exercise 3.2 Instructions
 ;=====================================
 */
