--- a/week-3/enhanced-composer-app/src/app/app.component.html
+++ b/week-3/enhanced-composer-app/src/app/app.component.html
@@ -2,11 +2,10 @@
 ======================================
 ; Title: app.component.html
 ; Author: Chris Gorham
-; Date: 30 May 2023
-; Description: This code is for the html portions of the composer app project
+; Date: 05 June 2023
+; Description: This code is for the html portions of the enhanced composer app project
 ; Sources Used:
-; Exercise 2.4 Instructions
-; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+; Exercise 3.2 Instructions
 =====================================
 -->
 
