--- a/week-3/enhanced-composer-app/src/app/about/about.component.html
+++ b/week-3/enhanced-composer-app/src/app/about/about.component.html
@@ -2,10 +2,10 @@
 ======================================
 ; Title: about.component.html
 ; Author: Chris Gorham
-; Date: 30 May 2023
-; Description: This code is for the html portions of the about component for the composer app project
+; Date: 05 June 2023
+; Description: This code is for the html portions of the about component for the enhanced composer app project
 ; Sources Used:
-; Exercise 2.4 Instructions
+; Exercise 3.2 Instructions
 ; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
 =====================================
 -->
