--- a/week-3/secure-profile-app/src/app/my-details/my-details.component.html
+++ b/week-3/secure-profile-app/src/app/my-details/my-details.component.html
@@ -2,15 +2,15 @@
 ======================================
 ; Title: my-details.component.html
 ; Author: Chris Gorham
-; Date: 29 May 2023
-; Description: This code is for the html portions of the my-details component for the profile picture app project (part 2)
+; Date: 06 June 2023
+; Description: This code is for the html portions of the my-details component for the secure profile app
 ; Sources Used:
-; Exercise 2.3 Instructions
-; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+; Exercise 3.3 Instructions
 =====================================
 -->
 
 <ul class="list">
+  <!--Pulls the data from the variables-->
   <li class="list-group-item">Name: {{ myProfile.fullName }}</li>
   <li class="list-group-item">Favorite Food: {{ myProfile.favoriteFood }}</li>
   <li class="list-group-item">Favorite Color: {{ myProfile.favoriteColor }}</li>
