--- a/week-3/secure-profile-app/src/app/my-image/my-image.component.html
+++ b/week-3/secure-profile-app/src/app/my-image/my-image.component.html
@@ -2,11 +2,10 @@
 ======================================
 ; Title: my-image.component.html
 ; Author: Chris Gorham
-; Date: 29 May 2023
-; Description: This code is for the html portions of the my-image component for the profile picture app project (part 2)
+; Date: 06 June 2023
+; Description: This code is for the html portions of the my-image component for the secure profile app
 ; Sources Used:
-; Exercise 2.3 Instructions
-; Angular CLI Hello World YouTube Video (https://youtu.be/XRm0SnUJROU)
+; Exercise 3.3 Instructions
 =====================================
 -->
 
