--- a/week-3/enhanced-secure-profile-app/src/app/home/home.component.html
+++ b/week-3/enhanced-secure-profile-app/src/app/home/home.component.html
@@ -3,9 +3,9 @@
 ; Title: home.component.html
 ; Author: Chris Gorham
 ; Date: 06 June 2023
-; Description: This code is for the 'home' html portions of the secure profile app
+; Description: This code is for the 'home' html portions of the enhanced secure profile app
 ; Sources Used:
-; Exercise 3.3 Instructions
+; Assignment 3.4 Instructions
 =====================================
 -->
 
@@ -27,12 +27,12 @@
 <div class="main" class="container">
   <br><br>
 
-  <h2>Exercise 3.3 - Passing Data to Routes, Part 2</h2>
+  <h2>Assignment 3.4 - Guarding Routes</h2>
 
   <br><br>
 
-  <!-- If statement that refers to the isLoggedIn variable and gives an else statement to handle if it is false-->
-  <div class="row" *ngIf="isLoggedIn; else showError">
+
+  <div class="row">
     <div class="col-sm-4">
       <app-my-image></app-my-image>
     </div>
@@ -41,7 +41,6 @@
     </div>
   </div>
 
-  <ng-template #showError>
     <div class="row">
 
       <div class="col-sm-12">
