--- a/week-3/enhanced-secure-profile-app/src/app/home/home.component.html
+++ b/week-3/enhanced-secure-profile-app/src/app/home/home.component.html
@@ -31,7 +31,7 @@
 
   <br><br>
 
-
+  <!--will show if isLoggedIn returns true-->
   <div class="row">
     <div class="col-sm-4">
       <app-my-image></app-my-image>
@@ -41,21 +41,6 @@
     </div>
   </div>
 
-    <div class="row">
-
-      <div class="col-sm-12">
-
-        <h4 class="alert alert-danger">
-
-          You are not authorized to view this content.
-
-        </h4>
-
-
-      </div>
-
-    </div>
-  </ng-template>
 
 </div>
 
