--- a/week-4/di-composer-app/src/app/app.component.html
+++ b/week-4/di-composer-app/src/app/app.component.html
@@ -24,8 +24,7 @@
 </nav>
 
 <div class="main" class="container">
-  <!-- uses the assignment variable to post the assignment into the HTML-->
-  <br><br><h2>{{ assignment }}</h2>
+  <br><br><h2>Exercise 4.2 - Inversion of Control and Dependency Injection</h2>
   <router-outlet></router-outlet>
 
 </div>
