code comments & attribution updates

--- a/week-4/di-composer-app/src/app/app.component.css
+++ b/week-4/di-composer-app/src/app/app.component.css
@@ -2,9 +2,9 @@
 ======================================
 ; Title: app.component.css
 ; Author: Chris Gorham
-; Date: 05 June 2023
-; Description: This code supports CSS functionality for the enhanced composer app
+; Date: 12 June 2023
+; Description: This code supports CSS functionality for the di composer app
 ; Sources Used:
-; Exercise 3.2 Instructions
+; Exercise 4.2 Instructions
 ;=====================================
 */
