--- a/week-4/di-composer-app/src/app/app.component.html
+++ b/week-4/di-composer-app/src/app/app.component.html
@@ -2,10 +2,10 @@
 ======================================
 ; Title: app.component.html
 ; Author: Chris Gorham
-; Date: 05 June 2023
-; Description: This code is for the html portions of the enhanced composer app project
+; Date: 12 June 2023
+; Description: This code is for the html portions of the di composer app project
 ; Sources Used:
-; Exercise 3.2 Instructions
+; Exercise 4.2 Instructions
 =====================================
 -->
 
