--- a/week-4/di-composer-app/src/app/composer-list/composer-list.component.css
+++ b/week-4/di-composer-app/src/app/composer-list/composer-list.component.css
@@ -2,10 +2,10 @@
 ======================================
 ; Title: composer-list.component.css
 ; Author: Chris Gorham
-; Date: 05 June 2023
-; Description: This code supports CSS functionality for the composer-list component of the enhanced composer app
+; Date: 12 June 2023
+; Description: This code supports CSS functionality for the composer-list component of the di composer app
 ; Sources Used:
-; Exercise 3.2 Instructions
+; Exercise 4.2 Instructions
 ;=====================================
 */
 
