--- a/week-4/reactive-composer-app/src/app/app.component.html
+++ b/week-4/reactive-composer-app/src/app/app.component.html
@@ -24,7 +24,7 @@
 </nav>
 
 <div class="main" class="container">
-  <br><br><h2>Exercise 4.2 - Inversion of Control and Dependency Injection</h2>
+  <br><br><h2>Exercise 4.3 - Handling Events with Observables</h2>
   <router-outlet></router-outlet>
 
 </div>
