--- a/week-4/reactive-composer-app/src/app/about/about.component.css
+++ b/week-4/reactive-composer-app/src/app/about/about.component.css
@@ -3,9 +3,9 @@
 ; Title: about.component.css
 ; Author: Chris Gorham
 ; Date: 12 June 2023
-; Description: This code supports CSS functionality for the about component of the di composer app
+; Description: This code supports CSS functionality for the about component of the reactive composer app
 ; Sources Used:
-; Exercise 4.2 Instructions
+; Exercise 4.3 Instructions
 ;=====================================
 */
 
