--- a/week-4/reactive-composer-app/src/app/app.component.css
+++ b/week-4/reactive-composer-app/src/app/app.component.css
@@ -3,8 +3,8 @@
 ; Title: app.component.css
 ; Author: Chris Gorham
 ; Date: 12 June 2023
-; Description: This code supports CSS functionality for the di composer app
+; Description: This code supports CSS functionality for the reactive composer app
 ; Sources Used:
-; Exercise 4.2 Instructions
+; Exercise 4.3 Instructions
 ;=====================================
 */
