--- a/week-4/reactive-composer-app/src/app/app.component.html
+++ b/week-4/reactive-composer-app/src/app/app.component.html
@@ -3,9 +3,9 @@
 ; Title: app.component.html
 ; Author: Chris Gorham
 ; Date: 12 June 2023
-; Description: This code is for the html portions of the di composer app project
+; Description: This code is for the html portions of the reactive composer app project
 ; Sources Used:
-; Exercise 4.2 Instructions
+; Exercise 4.3 Instructions
 =====================================
 -->
 
