--- a/week-4/reactive-composer-app/src/app/composer-list/composer-list.component.css
+++ b/week-4/reactive-composer-app/src/app/composer-list/composer-list.component.css
@@ -3,9 +3,9 @@
 ; Title: composer-list.component.css
 ; Author: Chris Gorham
 ; Date: 12 June 2023
-; Description: This code supports CSS functionality for the composer-list component of the di composer app
+; Description: This code supports CSS functionality for the composer-list component of the reactive composer app
 ; Sources Used:
-; Exercise 4.2 Instructions
+; Exercise 4.3 Instructions
 ;=====================================
 */
 
@@ -15,4 +15,10 @@
 
 .white-text {
   color: white;
+}
+
+.composer-input {
+  width: 30%;
+  float: right;
+  margin-bottom: 5px;
 }
