--- a/week-4/reactive-composer-app/src/app/composer-list/composer-list.component.html
+++ b/week-4/reactive-composer-app/src/app/composer-list/composer-list.component.html
@@ -3,14 +3,15 @@
 ; Title: composer-list.component.html
 ; Author: Chris Gorham
 ; Date: 12 June 2023
-; Description: This code is for the html portions of the composer-list component for the di composer app project
+; Description: This code is for the html portions of the composer-list component for the reactive composer app project
 ; Sources Used:
-; Exercise 4.2 Instructions
+; Exercise 4.3 Instructions
 =====================================
 -->
 
 <div class="row">
-  <div class="col-sm-8">
+  <div class="col-sm-8"><br><br>
+    <input type="text" id="txtSearch" class="composer-input float-right" [formControl]="txtSearchControl" placeholder="Search by name"><br><br>
     <table class="table table-bordered">
       <thead>
         <tr>
