--- a/week-4/enterprise-composer-app/src/app/app.component.html
+++ b/week-4/enterprise-composer-app/src/app/app.component.html
@@ -2,10 +2,10 @@
 ======================================
 ; Title: app.component.html
 ; Author: Chris Gorham
-; Date: 12 June 2023
-; Description: This code is for the html portions of the reactive composer app project
+; Date: 13 June 2023
+; Description: This code is for the html portions of the enterprise composer app project
 ; Sources Used:
-; Exercise 4.3 Instructions
+; Assignment 4.4 Instructions
 =====================================
 -->
 
@@ -24,7 +24,7 @@
 </nav>
 
 <div class="main" class="container">
-  <br><br><h2>Exercise 4.3 - Handling Events with Observables</h2>
+  <br><br><h2>Assignment 4.4 - Async Pipe</h2>
   <router-outlet></router-outlet>
 
 </div>
