--- a/week-5/in-n-out-booksp1/src/app/about/about.component.html
+++ b/week-5/in-n-out-booksp1/src/app/about/about.component.html
@@ -9,24 +9,24 @@
 =====================================
 -->
 
-<div class="row">
-
-  <div class="col-sm-4"><br><br>
-      <br><img class="composer-bg" src="./assets/mozart.png" width="50%">
-
+<div fxLayout="row wrap">
+  <div fxFlex>
+    <div fxLayout="column">
+      <div>
+        <img src="../assets/book.png" />
+      </div>
+      <div>
+        <em>
+          Photo by Tom Palumbo on <a class="attribution-link" href="https://en.wikipedia.org/wiki/Jack_Kerouac#/media/File:Kerouac_by_Palumbo_2_(cropped).png" target="_blank">Wikipedia</a>
+        </em>
+      </div>
+    </div>
   </div>
 
-  <div class="col-sm-8"><br><br>
-    <h2>Wolfgang Amadeus Mozart</h2>
-    <hr>
-    <p>
-      <figure>
-        Wolfgang Amadeus Mozart (1756-1791) was one of the most influential, popular and prolific composers of the classical period. He composed over 600 works, including some of the most famous and loved pieces of symphonic, chamber, operatic, and choral music. Mozart was born in Salzburg to a musical family. From an early age, the young Mozart showed all the signs of a prodigious musical talent. By the age of 5 he could read and write music, and he would entertain people with his talents on the keyboard. By the age of 6 he was writing his first compositions. Mozart was generally considered to be a rare musical genius, though Mozart said that he was diligent in studying other great composers such as Haydn and Bach.<br><br>
-        <figcaption>Source: <a href="https://www.operaphila.org/whats-on/on-stage-2016-2017/figaro/composer/#:~:text=Wolfgang%20Amadeus%20Mozart%20(1756%2D1791,Salzburg%20to%20a%20musical%20family" target="resource window">Operaphila</a></figcaption>
-      </figure>
-
+  <div fxFlex>
+    <h1 class="bio-title">All About Jack Kerouac</h1>
+    <p class="bio">
+      Jack Kerouac (1922-1969) was an influential American novelist and poet, known for his role in the Beat Generation. Born in Lowell, Massachusetts, Kerouac's most renowned work is "On the Road" (1957), a novel that captured the spirit of rebellion and wanderlust. His spontaneous prose style and exploration of countercultural themes inspired generations. Kerouac battled personal demons, including alcoholism, and died at age 47. His literary legacy continues to inspire and challenge readers today.
     </p>
   </div>
-
-
 </div>
