comments and attribution (final)

--- a/week-5/in-n-out-booksp1/src/styles.scss
+++ b/week-5/in-n-out-booksp1/src/styles.scss
@@ -1,4 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+/*
+======================================
+; Title: styles.scss
+; Author: Chris Gorham
+; Date: 21 June 2023
+; Description: This code supports functionality for the In-N-Out Books Project (Part 1)
+; Sources Used:
+; Assignment 5.2 Instructions
+;=====================================
+*/
 
 @import './theme';
 
