--- a/week-5/in-n-out-booksp1/src/_theme.scss
+++ b/week-5/in-n-out-booksp1/src/_theme.scss
@@ -1,3 +1,14 @@
+/*
+======================================
+; Title: _theme.scss
+; Author: Chris Gorham
+; Date: 21 June 2023
+; Description: This code supports functionality for the In-N-Out Books Project (Part 1)
+; Sources Used:
+; Assignment 5.2 Instructions
+;=====================================
+*/
+
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
