--- a/week-5/in-n-out-booksp1/src/app/app.component.html
+++ b/week-5/in-n-out-booksp1/src/app/app.component.html
@@ -1,3 +1,14 @@
+<!--
+======================================
+; Title: app.component.html
+; Author: Chris Gorham
+; Date: 21 June 2023
+; Description: This code is for the html portions of the app component for the In-N-Out Books project (Part 1)
+; Sources Used:
+; Exercise 5.2 Instructions
+=====================================
+-->
+
 <mat-toolbar class="toolbar">
   <mat-toolbar-row>
     <div class="logo">
