--- a/week-5/in-n-out-booksp2/src/app/book-list/book-list.component.html
+++ b/week-5/in-n-out-booksp2/src/app/book-list/book-list.component.html
@@ -18,22 +18,22 @@
     <tr mat-row *matRowDef="let row; columns: header;"></tr>
 
     <ng-container matColumnDef="isbn">
-      <th mat-header-cell *matHeaderCellDef>ISBN</th>
+      <th mat-header-cell *matHeaderCellDef class="header-center">ISBN</th>
       <td mat-cell *matCellDef="let element"><a class="a-link blue" (click)="showBookDetails(element.isbn)"> {{ element.isbn }}</a></td>
     </ng-container>
 
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef>Title</th>
+      <th mat-header-cell *matHeaderCellDef class="header-center">Title</th>
       <td mat-cell *matCellDef="let element"> {{ element.title }}</td>
     </ng-container>
 
     <ng-container matColumnDef="numOfPages">
-      <th mat-header-cell *matHeaderCellDef>Number of pages</th>
+      <th mat-header-cell *matHeaderCellDef class="header-center">Number of pages</th>
       <td mat-cell *matCellDef="let element"> {{ element.numOfPages }}</td>
     </ng-container>
 
     <ng-container matColumnDef="authors">
-      <th mat-header-cell *matHeaderCellDef>Authors</th>
+      <th mat-header-cell *matHeaderCellDef class="header-center">Authors</th>
       <td mat-cell *matCellDef="let element"> {{ element.authors.join(', ')}}</td>
     </ng-container>
   </table>
