--- a/week-5/in-n-out-booksp3/src/app/app.component.html
+++ b/week-5/in-n-out-booksp3/src/app/app.component.html
@@ -3,9 +3,9 @@
 ; Title: app.component.html
 ; Author: Chris Gorham
 ; Date: 21 June 2023
-; Description: This code is for the html portions of the app component for the In-N-Out Books project (Part 2)
+; Description: This code is for the html portions of the app component for the In-N-Out Books project (Part 3)
 ; Sources Used:
-; Exercise 5.3 Instructions
+; Assignment 5.4 Instructions
 =====================================
 -->
 
