--- a/week-5/in-n-out-booksp3/src/app/book-list/book-list.component.css
+++ b/week-5/in-n-out-booksp3/src/app/book-list/book-list.component.css
@@ -11,8 +11,8 @@
 
 .a-link {
   text-decoration: none;
-  /* changed this to yellow to be a little easier on the eyes */
-  color: yellow;
+  /* changed this to royal blue to be a little easier on the eyes */
+  color: royalblue;
 }
 
 .a-link:hover {
