--- a/week-6/in-n-out-booksp4/src/app/about/about.component.html
+++ b/week-6/in-n-out-booksp4/src/app/about/about.component.html
@@ -24,7 +24,7 @@
   </div>
 
   <div fxFlex>
-    <h1 class="bio-title">All About Jack Kerouac</h1>
+    <h1 class="blue">All About Jack Kerouac</h1>
     <p class="bio">
       Jack Kerouac (1922-1969) was an influential American novelist and poet, known for his role in the Beat Generation. Born in Lowell, Massachusetts, Kerouac's most renowned work is "On the Road" (1957), a novel that captured the spirit of rebellion and wanderlust. His spontaneous prose style and exploration of countercultural themes inspired generations. Kerouac battled personal demons, including alcoholism, and died at age 47. His literary legacy continues to inspire and challenge readers today.
     </p>
