--- a/week-6/in-n-out-booksp4/src/app/app.component.html
+++ b/week-6/in-n-out-booksp4/src/app/app.component.html
@@ -2,10 +2,10 @@
 ======================================
 ; Title: app.component.html
 ; Author: Chris Gorham
-; Date: 21 June 2023
-; Description: This code is for the html portions of the app component for the In-N-Out Books project (Part 3)
+; Date: 26 June 2023
+; Description: This code is for the html portions of the app component for the In-N-Out Books project
 ; Sources Used:
-; Assignment 5.4 Instructions
+; Exercise 6.2 Instructions
 =====================================
 -->
 
@@ -17,6 +17,7 @@
     <div style="width: 80%">
       <div fxLayout="row wrap" fxLayoutAlign="end start">
         <button mat-button routerLink="/book-list">Book List</button>
+        <button mat-button routerLink="/wishlist">Wish List</button>
         <button mat-button routerLink="/contact">Contact Us</button>
         <button mat-button routerLink="/about">About Us</button>
       </div>
