--- a/week-5/in-n-out-booksp3/src/styles.scss
+++ b/week-5/in-n-out-booksp3/src/styles.scss
@@ -13,3 +13,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.blue {
+  color: #2196F3;
+}
+
+.green {
+  color: #66BB6A;
+}
