--- a/week-6/in-n-out-booksp4/src/app/about/about.component.css
+++ b/week-6/in-n-out-booksp4/src/app/about/about.component.css
@@ -9,12 +9,10 @@
 ;=====================================
 */
 
-.bio-title {
-  color: royalblue;
-}
+
 
 a {
-  color: royalblue;
+  color: #2196F3;
 }
 
 .bio {
