--- a/week-6/in-n-out-booksp4/src/app/book-list/book-list.component.css
+++ b/week-6/in-n-out-booksp4/src/app/book-list/book-list.component.css
@@ -12,7 +12,7 @@
 .a-link {
   text-decoration: none;
   /* changed this to royal blue to be a little easier on the eyes */
-  color: royalblue;
+  color:  #2196F3;
 }
 
 .a-link:hover {
