attribution and comment updates

--- a/week-6/in-n-out-booksp4/src/app/book-details-dialog/book-details-dialog.component.html
+++ b/week-6/in-n-out-booksp4/src/app/book-details-dialog/book-details-dialog.component.html
@@ -2,10 +2,10 @@
 ======================================
 ; Title: book-details-dialog.component.html
 ; Author: Chris Gorham
-; Date: 21 June 2023
-; Description: This code is for the html portions of the book-list component for the In-N-Out Books project (Part 3)
+; Date: 26 June 2023
+; Description: This code is for the html portions of the book-list component for the In-N-Out Books project
 ; Sources Used:
-; Assignment 5.4 Instructions
+; Exercise 6.2 Instructions
 =====================================
 -->
 
