--- a/week-6/in-n-out-booksp4/src/app/book-details-dialog/book-details-dialog.component.css
+++ b/week-6/in-n-out-booksp4/src/app/book-details-dialog/book-details-dialog.component.css
@@ -2,16 +2,14 @@
 ======================================
 ; Title: book-list.component.css
 ; Author: Chris Gorham
-; Date: 21 June 2023
-; Description: This code supports functionality for the In-N-Out Books Project (Part 3)
+; Date: 26 June 2023
+; Description: This code supports functionality for the In-N-Out Books Project
 ; Sources Used:
-; Assignment 5.4 Instructions
+; Exercise 6.2 Instructions
 ;=====================================
 */
 
 
-
-
 .header-blue {
-  color: royalblue;
+  color: #2196F3;
 }
