--- a/week-6/in-n-out-booksp4/src/app/wishlist/wishlist.component.html
+++ b/week-6/in-n-out-booksp4/src/app/wishlist/wishlist.component.html
@@ -16,8 +16,8 @@
   <div>
     <mat-list fxFlex *ngIf="items && items.length > 0">
       <mat-list-item *ngFor="let item of items">
-        <div mat-line>Title: {{ item.title }}</div>
-        <div mat-line>Authors: {{ item.authors }}</div>
+        <div mat-line class="left">Title: {{ item.title }}</div>
+        <div mat-line class="left">Authors: {{ item.authors }}</div>
       </mat-list-item>
     </mat-list>
     <div fxFlex *ngIf="!items || items.length === 0">
