--- a/week-6/gpa-calculator-app1/src/app/base-layout/base-layout.component.html
+++ b/week-6/gpa-calculator-app1/src/app/base-layout/base-layout.component.html
@@ -1,1 +1,36 @@
-<p>base-layout works!</p>
+<!--
+======================================
+; Title: base-layout.component.html
+; Author: Chris Gorham
+; Date: 26 June 2023
+; Description: This code is for the html portions of the app component for the GPA Calculator App (Part 1)
+; Sources Used:
+; Exercise 6.3 Instructions
+=====================================
+-->
+
+<mat-toolbar class="toolbar">
+  <mat-toolbar-row>
+    <div class="logo">
+      <img src="./assets/logo.png" height="80" />
+    </div>
+    <div style="width: 80%">
+      <div fxLayout="row wrap" fxLayoutAlign="end start">
+        <button mat-button routerLink="/book-list">Home</button>
+      </div>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<br>
+<div fxLayout="row wrap">
+  <div fxFlex>
+    <mat-card class="main-container">
+      <mat-card-title>{{ assignment }}</mat-card-title>
+      <br><br>
+      <mat-card-content>
+        <router-outlet></router-outlet>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
