--- a/week-6/gpa-calculator-app1/src/app/auth-layout/auth-layout.component.html
+++ b/week-6/gpa-calculator-app1/src/app/auth-layout/auth-layout.component.html
@@ -1,1 +1,12 @@
-<p>auth-layout works!</p>
+<!--
+======================================
+; Title: auth-layout.component.html
+; Author: Chris Gorham
+; Date: 26 June 2023
+; Description: This code is for the html portions of the GPA Calculator App Part 1
+; Sources Used:
+; Exercise 6.3 Instructions
+=====================================
+-->
+
+<router-outlet></router-outlet>
