--- a/week-6/gpa-calculator-app1/src/app/not-found/not-found.component.html
+++ b/week-6/gpa-calculator-app1/src/app/not-found/not-found.component.html
@@ -1,1 +1,20 @@
-<p>not-found works!</p>
+<!--
+======================================
+; Title: not-found.component.html
+; Author: Chris Gorham
+; Date: 26 June 2023
+; Description: This code is for the html portions of the GPA Calculator App Part 1
+; Sources Used:
+; Exercise 6.3 Instructions
+=====================================
+-->
+
+
+
+<div fxLayout="column"><br><br><br>
+  <h2 class="error">404 Error</h2><br>
+<img class="image" src="./assets/bono.png"><br><br>
+<h3 class="not-found">Much like Bono, you still haven't found what you're looking for.</h3><br>
+<h2 class="not-found"><button mat-raised-button color="accent" routerLink="/">Return home</button></h2>
+
+</div>
