--- a/week-6/in-n-out-booksp4/src/app/app.component.html
+++ b/week-6/in-n-out-booksp4/src/app/app.component.html
@@ -9,7 +9,7 @@
 =====================================
 -->
 
-<mat-toolbar class="toolbar">
+<mat-toolbar color="primary">
   <mat-toolbar-row>
     <div class="logo">
       <img src="./assets/logo.png" height="80" />
