--- a/week-6/gpa-calculator-app1/src/app/base-layout/base-layout.component.html
+++ b/week-6/gpa-calculator-app1/src/app/base-layout/base-layout.component.html
@@ -9,7 +9,7 @@
 =====================================
 -->
 
-<mat-toolbar class="toolbar">
+<mat-toolbar color="primary">
   <mat-toolbar-row>
     <div class="logo">
       <img src="./assets/logo.png" height="80" />
@@ -23,6 +23,7 @@
 </mat-toolbar>
 
 <br>
+
 <div fxLayout="row wrap">
   <div fxFlex>
     <mat-card class="main-container">
