--- a/week-6/gpa-calculator-app1/src/app/not-found/not-found.component.css
+++ b/week-6/gpa-calculator-app1/src/app/not-found/not-found.component.css
@@ -3,7 +3,7 @@
 ; Title: not-found.component.css
 ; Author: Chris Gorham
 ; Date: 26 June 2023
-; Description: This code supports functionality for the GPA Calculator Project (Part 1)
+; Description: This code supports functionality for the GPA Calculator App(Part 1)
 ; Sources Used:
 ; Exercise 6.3 Instructions
 ;=====================================
