--- a/week-6/gpa-calculator-app1/src/app/not-found/not-found.component.css
+++ b/week-6/gpa-calculator-app1/src/app/not-found/not-found.component.css
@@ -18,12 +18,19 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 10%;
+  width: 20%;
 }
 
 .error {
   text-align: center;
   font-size: 5em;
+  color:red;
+}
+
+.error2 {
+  text-align: center;
+  font-size: 2em;
+  color:red;
 }
 
 
