--- a/week-6/gpa-calculator-app1/src/app/base-layout/base-layout.component.html
+++ b/week-6/gpa-calculator-app1/src/app/base-layout/base-layout.component.html
@@ -16,7 +16,7 @@
     </div>
     <div style="width: 80%">
       <div fxLayout="row wrap" fxLayoutAlign="end start">
-        <button mat-button routerLink="/book-list">Home</button>
+        <button mat-button routerLink="/">Home</button>
       </div>
     </div>
   </mat-toolbar-row>
