--- a/week-6/gpa-calculator-app1/src/app/not-found/not-found.component.html
+++ b/week-6/gpa-calculator-app1/src/app/not-found/not-found.component.html
@@ -13,8 +13,12 @@
 
 <div fxLayout="column"><br><br><br>
   <h2 class="error">404 Error</h2><br>
-<img class="image" src="./assets/bono.png"><br><br>
-<h3 class="not-found">Much like Bono, you still haven't found what you're looking for.</h3><br>
-<h2 class="not-found"><button mat-raised-button color="accent" routerLink="/">Return home</button></h2>
+  <h3 class="error2">Page Not Found</h3>
+
+  <img class="image" src="./assets/bono.png"><br><br>
+
+  <h2 class="not-found">Much like Bono, you still haven't found what you're looking for.</h2><br>
+
+  <h2 class="not-found"><button mat-raised-button color="accent" routerLink="/">Return home</button></h2>
 
 </div>
