updates (fixing stuff)

--- a/week-6/gpa-calculator-app2/src/app/home/home.component.html
+++ b/week-6/gpa-calculator-app2/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 =====================================
 -->
 
-	<div fxLayout=”row wrap” fxLayoutGap=”20px”>
+<div fxLayout=”row wrap” fxLayoutGap=”20px”>
 
   <div fxFlex class=”grade-form”>
     <mat-card class="mat-elevation-z8">
@@ -53,7 +53,7 @@
 
     <mat-card class="mat-elevation-z8">
       <mat-card-title style="text-align: center;">
-        GPA: <app-gpa [gpaTotal]="gpaTotal"></app-gpa>
+        GPA:
       </mat-card-title>
     </mat-card>
   </div>
