--- a/week-6/gpa-calculator-app2/src/app/home/home.component.html
+++ b/week-6/gpa-calculator-app2/src/app/home/home.component.html
@@ -3,58 +3,10 @@
 ; Title: home.component.html
 ; Author: Chris Gorham
 ; Date: 26 June 2023
-; Description: This code supports functionality for the GPA Calculator App (Part 2)
+; Description: This code supports functionality for the GPA Calculator App (Part 1)
 ; Sources Used:
-; Assignment 6.4 Instructions
+; Exercise 6.3 Instructions
 =====================================
 -->
 
-<div fxLayout=”row wrap” fxLayoutGap=”20px”>
-
-  <div fxFlex class=”grade-form”>
-    <mat-card class="mat-elevation-z8">
-      <mat-card-title>Grade Entry</mat-card-title>
-      <mat-card-content>
-        <form fxLayout="column" fxLayoutGap="16px">
-          <mat-form-field fxFlex appearance="fill">
-            <mat-label>Course</mat-label>
-            <input type="text" name="txtCourse" matInput [(ngModel)]="transcriptEntry.course">
-          </mat-form-field>
-
-          <mat-form-field fxFlex appearance="fill">
-            <mat-label>Grade</mat-label>
-            <mat-select [(ngModel)]="transcriptEntry.grade" name="selectGrade">
-              <mat-option *ngFor="let grade of selectableGrades" [value]="grade">{{ grade }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <button mat-raised-button color="primary" (click)="saveEntry()">Save</button>
-        </form>
-      </mat-card-content>
-    </mat-card>
-  </div>
-
-  <div class="grade-summary" fxFlex>
-    <button mat-button color="primary" (click)="clearEntries()">Clear Transcript</button>
-    <mat-card class="mat-elevation-z8">
-      <mat-card-title>Transcript</mat-card-title>
-      <mat-card-content>
-        <app-grade-summary *ngFor="let entry of transcriptEntries" [course]="entry.course" [grade]="entry.grade"></app-grade-summary>
-      </mat-card-content>
-    </mat-card>
-
-  </div>
-</div>
-
-<br><br>
-
-<div fxLayout="column" fxLayoutGap="20px">
-  <div fxFlex class="gpa">
-    <button mat-button color="primary" (click)="calculateResults()">Calculate GPA</button>
-
-    <mat-card class="mat-elevation-z8">
-      <mat-card-title style="text-align: center;">
-        GPA:
-      </mat-card-title>
-    </mat-card>
-  </div>
-</div>
+<p>home works!</p>
