--- a/week-6/gpa-calculator-app2/src/app/base-layout/base-layout.component.html
+++ b/week-6/gpa-calculator-app2/src/app/base-layout/base-layout.component.html
@@ -1,3 +1,14 @@
+<!--
+======================================
+; Title: base-layout.component.html
+; Author: Chris Gorham
+; Date: 27 June 2023
+; Description: This code supports functionality for the GPA Calculator App (Part 2)
+; Sources Used:
+; Assignment 6.4 Instructions
+=====================================
+-->
+
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <div class="logo">
