--- a/week-6/gpa-calculator-app2/src/app/auth-layout/auth-layout.component.html
+++ b/week-6/gpa-calculator-app2/src/app/auth-layout/auth-layout.component.html
@@ -1,1 +1,12 @@
+<!--
+======================================
+; Title: auth-layout.component.html
+; Author: Chris Gorham
+; Date: 27 June 2023
+; Description: This code supports functionality for the GPA Calculator App (Part 2)
+; Sources Used:
+; Assignment 6.4 Instructions
+=====================================
+-->
+
 <router-outlet></router-outlet>
