--- a/week-6/gpa-calculator-app2/src/app/base-layout/base-layout.component.css
+++ b/week-6/gpa-calculator-app2/src/app/base-layout/base-layout.component.css
@@ -1,3 +1,15 @@
+/*
+======================================
+; Title: base-layout.component.css
+; Author: Chris Gorham
+; Date: 27 June 2023
+; Description: This code supports functionality for the GPA Calculator App(Part 2)
+; Sources Used:
+; Assignment 6.4 Instructions
+;=====================================
+*/
+
+
 .logo {
   margin-top: 5px;
 }
