--- a/week-7/gpa-calculator-app3/src/app/sign-in/sign-in.component.html
+++ b/week-7/gpa-calculator-app3/src/app/sign-in/sign-in.component.html
@@ -12,7 +12,7 @@
 <div fxLayout="column">
 
   <div fxFlex>
-    <mat-card class="mat-elevation-z8 sign-in-container">
+    <mat-card class="mat-elevation-z8 signin-container">
 
       <mat-card-tile>Student Sign In</mat-card-tile>
       <mat-card-subtitle>You must enter a valid Student ID to proceed.</mat-card-subtitle>
