comments & attribution updates

--- a/week-7/gpa-calculator-app3/src/app/grade-summary/grade-summary.component.html
+++ b/week-7/gpa-calculator-app3/src/app/grade-summary/grade-summary.component.html
@@ -2,10 +2,10 @@
 ======================================
 ; Title: grade-summary.component.html
 ; Author: Chris Gorham
-; Date: 27 June 2023
-; Description: This code supports functionality for the GPA Calculator App (Part 2)
+; Date: 03 July 2023
+; Description: This code supports functionality for the GPA Calculator App (Part 3)
 ; Sources Used:
-; Assignment 6.4 Instructions
+; Exercise 7.2 Instructions
 =====================================
 -->
 
