--- a/week-7/gpa-calculator-app3/src/app/sign-in/sign-in.component.css
+++ b/week-7/gpa-calculator-app3/src/app/sign-in/sign-in.component.css
@@ -1,3 +1,14 @@
+/*
+======================================
+; Title: sign-in.component.css
+; Author: Chris Gorham
+; Date: 03 July 2023
+; Description: This code supports functionality for the GPA Calculator App(Part 3)
+; Sources Used:
+; Exercise 7.2 Instructions
+;=====================================
+*/
+
 .signin-container {
   width: 35%;
   margin: 15% auto;
